[gd_scene load_steps=10 format=4 uid="uid://b45gd53xht61k"]

[ext_resource type="TileSet" uid="uid://doag0i6nwosrp" path="res://Map/western front.tres" id="1_6yc6o"]
[ext_resource type="Script" uid="uid://bvmghxduvvg4c" path="res://Map/map.gd" id="2_6yc6o"]
[ext_resource type="PackedScene" uid="uid://nsc5pq2amx6o" path="res://Unit/unit.tscn" id="2_njngi"]
[ext_resource type="Texture2D" uid="uid://beb03fmk8pcx0" path="res://Res/Enviroment/trench.png" id="4_8svjd"]
[ext_resource type="Texture2D" uid="uid://csq0egbnnd1cx" path="res://Res/Enviroment/no mans land.png" id="5_3g1qk"]
[ext_resource type="PackedScene" uid="uid://bniy5paeav6q6" path="res://Terrain Objects/trees.tscn" id="6_3g1qk"]
[ext_resource type="PackedScene" uid="uid://cn07wuv2ep3kf" path="res://Terrain Objects/machine_gun_post.tscn" id="7_d1580"]
[ext_resource type="Texture2D" uid="uid://do65ovgegckjf" path="res://Res/Enviroment/sandbag wall.png" id="8_5ej7w"]
[ext_resource type="PackedScene" uid="uid://db63lxv26csl1" path="res://Terrain Objects/barbed_wire.tscn" id="9_lymsy"]

[node name="Map" type="TileMapLayer"]
y_sort_enabled = true
position = Vector2(2866, 258)
rotation = -0.261799
tile_map_data = PackedByteArray("AAAAAAEAAAAAAAAAAAABAAEAAAAAAAAAAAACAAEAAAAAAAAAAAACAAAAAAAAAAAAAAABAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAP//AAAAAAAAAAACAP//AAAAAAAAAAADAP//AAAAAAAAAAAAAP//AAAAAAAAAAABAP7/AAAAAAAAAAADAAEAAAACAAAAAAADAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAADAAIAAAAAAAAAAAACAAMAAAAAAAAAAAACAAIAAAAAAAAAAAABAAIAAAAAAAAAAAAAAAMAAAAAAAAAAAAAAAIAAAAAAAAAAAD//wEAAAAAAAAAAAD//wAAAAAAAAAAAAD/////AAAAAAAAAAD//wIAAAAAAAAAAAAFAAAAAAAAAAAAAAAFAP//AAAAAAAAAAAGAAEAAAAAAAAAAAAHAAAAAAAAAAAAAAAIAAEAAAAAAAAAAAAJAAAAAAAAAAEAAAAKAAAAAAAAAAEAAAAHAAEAAAAAAAAAAAAGAAIAAAAAAAAAAAAFAAEAAAAAAAAAAAAAAAQAAAAAAAAAAAAAAAUAAAAAAAAAAAAAAAYAAAAAAAAAAAAAAAcAAAAAAAAAAAAAAAgAAAAAAAAAAAABAAMAAAAAAAAAAAABAAQAAAAAAAAAAAABAAUAAAAAAAAAAAABAAYAAAAAAAAAAAABAAcAAAAAAAAAAAABAAgAAAAAAAAAAAACAAQAAAAAAAAAAAACAAUAAAAAAAAAAAACAAYAAAAAAAAAAAACAAcAAAAAAAAAAAACAAgAAAAAAAAAAAADAAMAAAAAAAAAAAADAAQAAAAAAAAAAAADAAUAAAAAAAAAAAADAAYAAAAAAAAAAAADAAcAAAAAAAAAAAADAAgAAAAAAAAAAAAEAAEAAAAAAAAAAAAEAAIAAAAAAAAAAAAEAAMAAAAAAAAAAAAEAAQAAAAAAAAAAAAEAAUAAAAAAAAAAAAEAAYAAAAAAAAAAAAEAAcAAAAAAAAAAAAEAAgAAAAAAAAAAAAFAAIAAAAAAAAAAAAFAAMAAAAAAAAAAAAFAAQAAAAAAAAAAAAFAAUAAAAAAAAAAAAFAAYAAAAAAAAAAAAFAAcAAAAAAAAAAAAFAAgAAAAAAAAAAAAGAAAAAAAAAAAAAAAGAAMAAAACAAAAAAAGAAQAAAAAAAAAAAAGAAUAAAAAAAAAAAAGAAYAAAAAAAAAAAAGAAcAAAAAAAAAAAAGAAgAAAAAAAAAAAAHAAIAAAAAAAAAAAAHAAMAAAAAAAAAAAAHAAQAAAAAAAAAAAAHAAUAAAAAAAAAAAAHAAYAAAAAAAAAAAAHAAcAAAAAAAAAAAAHAAgAAAACAAAAAAAIAAAAAAAAAAAAAAAIAAIAAAAAAAAAAAAIAAMAAAAAAAAAAAAIAAQAAAAAAAAAAAAIAAUAAAAAAAAAAAAIAAYAAAAAAAAAAAAIAAcAAAAAAAAAAAAIAAgAAAAAAAAAAAAJAAEAAAAAAAAAAAAJAAIAAAAAAAAAAAAJAAMAAAAAAAAAAAAJAAQAAAAAAAAAAAAJAAUAAAAAAAAAAAAJAAYAAAAAAAAAAAAJAAcAAAAAAAAAAAAJAAgAAAAAAAAAAAAKAAEAAAAAAAAAAAAKAAIAAAAAAAAAAAAKAAMAAAAAAAAAAAAKAAQAAAAAAAAAAAAKAAUAAAAAAAAAAAAKAAYAAAAAAAAAAAAKAAcAAAAAAAAAAAAKAAgAAAAAAAAAAAALAAAAAAAAAAEAAAALAAEAAAAAAAAAAAALAAIAAAAAAAAAAAALAAMAAAAAAAAAAAALAAQAAAAAAAAAAAALAAUAAAAAAAAAAAALAAYAAAAAAAAAAAALAAcAAAAAAAAAAAALAAgAAAAAAAAAAAAGAP//AAAAAAAAAAAHAP//AAAAAAEAAAAIAP//AAAAAAEAAAAJAP//AAAAAAAAAAAKAP//AAAAAAAAAAALAP//AAAAAAAAAAAAAAkAAAAAAAAAAAAAAAoAAAAAAAAAAAABAAkAAAAAAAAAAAABAAoAAAAAAAAAAAACAAkAAAAAAAAAAAACAAoAAAAAAAAAAAADAAkAAAAAAAAAAAADAAoAAAACAAAAAAAEAAkAAAAAAAAAAAAEAAoAAAAAAAAAAAAFAAkAAAAAAAAAAAAFAAoAAAAAAAAAAAAGAAkAAAAAAAAAAAAGAAoAAAAAAAAAAAAHAAkAAAAAAAAAAAAHAAoAAAAAAAAAAAAIAAkAAAAAAAAAAAAIAAoAAAAAAAAAAAAJAAkAAAAAAAAAAAAJAAoAAAAAAAAAAAAKAAkAAAAAAAAAAAAKAAoAAAAAAAAAAAALAAkAAAAAAAAAAAALAAoAAAAAAAAAAAAAAAsAAAAAAAAAAAD//wQAAAAAAAAAAAD//wUAAAAAAAAAAAD//wYAAAAAAAAAAAD//wcAAAAAAAAAAAD//wgAAAAAAAAAAAD//wkAAAAAAAAAAAD//woAAAAAAAAAAAD//wMAAAAAAAAAAAABAA4AAAABAAEAAAACAA8AAAABAAEAAAADABAAAAABAAEAAAAEABAAAAABAAEAAAAFABAAAAABAAEAAAAGABEAAAABAAEAAAAHABEAAAABAAEAAAAIABIAAAABAAEAAAAIABEAAAABAAEAAAAJABIAAAABAAEAAAAKABIAAAABAAEAAAALABMAAAABAAEAAAALABIAAAABAAEAAAAMABMAAAABAAEAAAANABQAAAABAAEAAAAKABMAAAABAAEAAAAFABEAAAABAAEAAAABAA8AAAABAAEAAAACABAAAAABAAEAAAAAAA4AAAABAAEAAAADAA8AAAABAAEAAAAEAA8AAAABAAEAAAAGABAAAAABAAEAAAAHABAAAAABAAEAAAAJABEAAAABAAEAAAAKABEAAAABAAEAAAAMABIAAAABAAEAAAANABMAAAABAAEAAAAOABQAAAABAAEAAAAPABQAAAABAAEAAAAQABQAAAABAAEAAAAPABMAAAABAAEAAAAOABIAAAABAAEAAAANABIAAAABAAEAAAAOABMAAAABAAEAAAAPABIAAAABAAEAAAAQABMAAAABAAEAAAARABQAAAABAAEAAAATABUAAAABAAEAAAASABQAAAABAAEAAAAUABUAAAABAAEAAAAVABYAAAABAAEAAAAWABYAAAABAAEAAAAXABYAAAABAAEAAAAYABcAAAABAAEAAAAZABcAAAABAAEAAAAbABgAAAABAAEAAAAaABcAAAABAAEAAAAcABgAAAABAAEAAAAdABkAAAABAAEAAAAeABkAAAADAAEAAAAdABgAAAABAAEAAAAcABcAAAABAAEAAAAbABcAAAABAAEAAAAaABYAAAABAAEAAAAZABYAAAABAAEAAAAYABYAAAABAAEAAAAYABUAAAABAAEAAAAXABUAAAABAAEAAAAWABUAAAABAAEAAAAVABQAAAABAAEAAAAVABUAAAABAAEAAAAUABQAAAABAAEAAAATABQAAAABAAEAAAASABMAAAABAAEAAAARABMAAAABAAEAAAAMAAsAAAAAAAAAAAAMAAwAAAAAAAAAAAAMAA0AAAAAAAAAAAAMAA4AAAAAAAAAAAAMAA8AAAAAAAAAAAAMABAAAAAAAAAAAAAMABEAAAAAAAAAAAANAAsAAAAAAAAAAAANAAwAAAACAAAAAAANAA0AAAAAAAAAAAANAA4AAAAAAAAAAAANAA8AAAAAAAAAAAANABAAAAAAAAAAAAANABEAAAAAAAAAAAAOAAsAAAAAAAAAAAAOAAwAAAAAAAAAAAAOAA0AAAAAAAAAAAAOAA4AAAAAAAAAAAAOAA8AAAAAAAAAAAAOABAAAAAAAAAAAAAOABEAAAAAAAAAAAAPAAsAAAAAAAAAAAAPAAwAAAAAAAAAAAAPAA0AAAAAAAAAAAAPAA4AAAAAAAAAAAAPAA8AAAAAAAAAAAAPABAAAAAAAAAAAAAPABEAAAAAAAAAAAAQAAsAAAAAAAAAAAAQAAwAAAAAAAAAAAAQAA0AAAAAAAAAAAAQAA4AAAAAAAAAAAAQAA8AAAAAAAAAAAAQABAAAAAAAAAAAAAQABEAAAAAAAAAAAARAAsAAAAAAAAAAAARAAwAAAAAAAAAAAARAA0AAAAAAAAAAAARAA4AAAAAAAAAAAARAA8AAAAAAAAAAAARABAAAAAAAAAAAAARABEAAAAAAAAAAAARABIAAAAAAAAAAAASAAwAAAAAAAAAAAASAA0AAAAAAAAAAAASAA4AAAAAAAAAAAASAA8AAAAAAAAAAAASABAAAAAAAAAAAAASABEAAAAAAAAAAAASABIAAAAAAAAAAAATAAwAAAAAAAAAAAATAA0AAAAAAAAAAAATAA4AAAAAAAAAAAATAA8AAAAAAAAAAAATABAAAAAAAAAAAAATABEAAAAAAAAAAAATABIAAAAAAAAAAAAUAAwAAAAAAAAAAAAUAA0AAAAAAAAAAAAUAA4AAAAAAAAAAAAUAA8AAAAAAAAAAAAUABAAAAAAAAAAAAAUABEAAAAAAAAAAAAUABIAAAAAAAAAAAAVAAwAAAAAAAAAAAAVAA0AAAAAAAAAAAAVAA4AAAACAAAAAAAVAA8AAAAAAAAAAAAVABAAAAAAAAAAAAAVABEAAAAAAAAAAAAVABIAAAAAAAAAAAAWAAwAAAAAAAAAAAAWAA0AAAAAAAAAAAAWAA4AAAAAAAAAAAAWAA8AAAAAAAAAAAAWABAAAAAAAAAAAAAWABEAAAAAAAAAAAAWABIAAAAAAAAAAAAXAAwAAAAAAAAAAAAXAA0AAAAAAAAAAAAXAA4AAAAAAAAAAAAXAA8AAAAAAAAAAAAXABAAAAAAAAAAAAAXABEAAAAAAAAAAAAXABIAAAAAAAAAAAAQABIAAAABAAEAAAATABMAAAABAAEAAAAUABMAAAAAAAAAAAAVABMAAAAAAAAAAAAWABMAAAAAAAAAAAAXABMAAAAAAAAAAAAYABIAAAAAAAAAAAAYABMAAAAAAAAAAAAWABQAAAAAAAAAAAAXABQAAAAAAAAAAAAYABQAAAAAAAAAAAAZABIAAAAAAAAAAAAZABMAAAAAAAAAAAAZABQAAAAAAAAAAAAaABIAAAAAAAAAAAAaABMAAAAAAAAAAAAaABQAAAAAAAAAAAAZABUAAAAAAAAAAAAaABUAAAAAAAAAAAAbABMAAAAAAAAAAAAbABQAAAAAAAAAAAAbABUAAAAAAAAAAAAbABYAAAAAAAAAAAAcABMAAAAAAAAAAAAcABQAAAAAAAAAAAAcABUAAAAAAAAAAAAcABYAAAAAAAAAAAAdABcAAAADAAEAAAAdABYAAAADAAEAAAAdABUAAAADAAEAAAAeABUAAAADAAEAAAAdABQAAAADAAEAAAAeABQAAAADAAEAAAAdABMAAAADAAEAAAAeABMAAAADAAEAAAAeABgAAAADAAEAAAAeABcAAAADAAEAAAAeABYAAAADAAEAAAAdABIAAAADAAEAAAAdABEAAAADAAEAAAAdABAAAAADAAEAAAAeABAAAAADAAEAAAAdAA8AAAADAAEAAAAeAA8AAAADAAEAAAAeABEAAAADAAEAAAAeABIAAAADAAEAAAAdAA4AAAADAAEAAAAeAA4AAAADAAEAAAAeAA0AAAADAAEAAAAeAAwAAAADAAEAAAAdAAsAAAADAAEAAAAdAAoAAAADAAEAAAAdAAkAAAADAAEAAAAeAAoAAAADAAEAAAAdAA0AAAADAAEAAAAdAAwAAAADAAEAAAAeAAsAAAADAAEAAAAeAAkAAAADAAEAAAAeAAgAAAADAAEAAAAeAAcAAAADAAEAAAAdAAgAAAADAAEAAAAdAAcAAAADAAEAAAAdAAYAAAADAAEAAAAeAAYAAAADAAEAAAAdAAUAAAADAAEAAAAeAAUAAAADAAEAAAAdAAQAAAADAAEAAAAAAA8AAAADAAEAAAAAABAAAAADAAEAAAABABAAAAADAAEAAAABABEAAAADAAEAAAABABIAAAADAAEAAAAAABEAAAADAAEAAAD//w4AAAADAAEAAAD//w0AAAADAAEAAAD+/w0AAAADAAEAAAD+/wwAAAADAAEAAAD+/wsAAAADAAEAAAD+/woAAAADAAEAAAD+/wkAAAADAAEAAAD+/wcAAAADAAEAAAD+/wYAAAADAAEAAAD+/wUAAAADAAEAAAD+/wQAAAADAAEAAAD+/wMAAAADAAEAAAD+/wIAAAADAAEAAAD+/wEAAAADAAEAAAD+/wAAAAADAAEAAAD9////AAADAAEAAAD+////AAADAAEAAAD+/wgAAAADAAEAAAD+//7/AAADAAEAAAD+//3/AAADAAEAAAD9//z/AAADAAEAAAD+//z/AAADAAEAAAD9//v/AAADAAEAAAD+//v/AAADAAEAAAD+//r/AAADAAEAAAD+//n/AAADAAEAAAD+//j/AAADAAEAAAD9//f/AAADAAEAAAD9//j/AAADAAEAAAD9//n/AAADAAEAAAD9//r/AAADAAEAAAD9//3/AAADAAEAAAD9//7/AAADAAEAAAD9/wAAAAADAAEAAAD9/wMAAAADAAEAAAD9/wIAAAADAAEAAAD9/wEAAAADAAEAAAAFAA8AAAABAAEAAAACAA4AAAABAAEAAAAEABEAAAABAAEAAAAIABAAAAABAAEAAAAHABIAAAABAAEAAAALABEAAAAAAAAAAAALABAAAAAAAAAAAAAKABAAAAAAAAAAAAAKAA8AAAAAAAAAAAAJAA4AAAAAAAAAAAAIAA0AAAAAAAAAAAAIAAwAAAAAAAAAAAAJAA0AAAAAAAAAAAAKAA4AAAAAAAAAAAALAA8AAAAAAAAAAAALAA4AAAAAAAAAAAAKAA0AAAAAAAAAAAAJAAwAAAAAAAAAAAAKAAwAAAAAAAAAAAAKAAsAAAAAAAAAAAALAA0AAAAAAAAAAAALAAwAAAAAAAAAAAALAAsAAAAAAAAAAAAJAAsAAAAAAAAAAAAIAAsAAAAAAAAAAAAHAAsAAAAAAAAAAAAHAAwAAAAAAAAAAAAIAA4AAAAAAAAAAAAJAA8AAAAAAAAAAAAJABAAAAAAAAAAAAAIAA8AAAAAAAAAAAAHAA4AAAAAAAAAAAAHAA0AAAAAAAAAAAAGAAsAAAAAAAAAAAAGAAwAAAAAAAAAAAAGAA0AAAAAAAAAAAAHAA8AAAAAAAAAAAAGAA8AAAAAAAAAAAAGAA4AAAAAAAAAAAAFAAwAAAAAAAAAAAAFAAsAAAAAAAAAAAAEAAsAAAAAAAAAAAAEAAwAAAAAAAAAAAAEAA0AAAAAAAAAAAAFAA4AAAAAAAAAAAAFAA0AAAAAAAAAAAADAAsAAAAAAAAAAAACAAsAAAAAAAAAAAACAAwAAAAAAAAAAAADAA0AAAAAAAAAAAADAAwAAAAAAAAAAAAEAA4AAAAAAAAAAAADAA4AAAAAAAAAAAACAA0AAAAAAAAAAAABAAwAAAAAAAAAAAABAAsAAAAAAAAAAAAAAAwAAAAAAAAAAAABAA0AAAAAAAAAAAD//wwAAAAAAAAAAAAAAA0AAAAAAAAAAAD//wsAAAAAAAAAAAAVAAMAAAAAAAEAAAAVAAQAAAAAAAAAAAAVAAUAAAAAAAAAAAAVAAYAAAAAAAAAAAAVAAcAAAAAAAAAAAAVAAgAAAAAAAAAAAAVAAkAAAAAAAAAAAAVAAoAAAAAAAAAAAAVAAsAAAAAAAAAAAAWAAMAAAAAAAEAAAAWAAQAAAAAAAAAAAAWAAUAAAAAAAAAAAAWAAYAAAAAAAAAAAAWAAcAAAAAAAAAAAAWAAgAAAACAAAAAAAWAAkAAAAAAAAAAAAWAAoAAAAAAAAAAAAWAAsAAAAAAAAAAAAXAAMAAAAAAAAAAAAXAAQAAAAAAAEAAAAXAAUAAAAAAAAAAAAXAAYAAAAAAAAAAAAXAAcAAAAAAAAAAAAXAAgAAAAAAAAAAAAXAAkAAAAAAAAAAAAXAAoAAAAAAAAAAAAXAAsAAAAAAAAAAAAYAAMAAAAAAAAAAAAYAAQAAAAAAAEAAAAYAAUAAAAAAAAAAAAYAAYAAAAAAAAAAAAYAAcAAAAAAAAAAAAYAAgAAAAAAAAAAAAYAAkAAAAAAAAAAAAYAAoAAAAAAAAAAAAYAAsAAAAAAAAAAAAYAAwAAAAAAAAAAAAYAA0AAAAAAAAAAAAYAA4AAAAAAAAAAAAYAA8AAAAAAAAAAAAYABAAAAAAAAAAAAAYABEAAAAAAAAAAAAZAAMAAAAAAAAAAAAZAAQAAAAAAAAAAAAZAAUAAAAAAAEAAAAZAAYAAAAAAAAAAAAZAAcAAAAAAAAAAAAZAAgAAAAAAAAAAAAZAAkAAAAAAAAAAAAZAAoAAAAAAAAAAAAZAAsAAAAAAAAAAAAZAAwAAAAAAAAAAAAZAA0AAAAAAAAAAAAZAA4AAAAAAAAAAAAZAA8AAAAAAAAAAAAZABAAAAAAAAAAAAAZABEAAAAAAAAAAAAaAAMAAAAAAAAAAAAaAAQAAAAAAAAAAAAaAAUAAAAAAAEAAAAaAAYAAAAAAAAAAAAaAAcAAAAAAAAAAAAaAAgAAAAAAAAAAAAaAAkAAAAAAAAAAAAaAAoAAAAAAAAAAAAaAAsAAAAAAAAAAAAaAAwAAAAAAAAAAAAaAA0AAAAAAAAAAAAaAA4AAAAAAAAAAAAaAA8AAAAAAAAAAAAaABAAAAAAAAAAAAAaABEAAAAAAAAAAAAbAAQAAAAAAAAAAAAbAAUAAAAAAAAAAAAbAAYAAAAAAAEAAAAbAAcAAAAAAAAAAAAbAAgAAAAAAAAAAAAbAAkAAAAAAAAAAAAbAAoAAAAAAAAAAAAbAAsAAAAAAAAAAAAbAAwAAAAAAAAAAAAbAA0AAAAAAAAAAAAbAA4AAAAAAAAAAAAbAA8AAAAAAAAAAAAbABAAAAAAAAAAAAAbABEAAAAAAAAAAAAbABIAAAAAAAAAAAAcAAMAAAABAAAAAAAcAAQAAAAAAAAAAAAcAAUAAAAAAAAAAAAcAAYAAAAAAAEAAAAcAAcAAAAAAAAAAAAcAAgAAAAAAAAAAAAcAAkAAAAAAAAAAAAcAAoAAAAAAAAAAAAcAAsAAAAAAAAAAAAcAAwAAAAAAAAAAAAcAA0AAAAAAAAAAAAcAA4AAAAAAAAAAAAcAA8AAAAAAAAAAAAcABAAAAAAAAAAAAAcABEAAAAAAAAAAAAcABIAAAAAAAAAAAAMAAIAAAAAAAAAAAAMAAMAAAAAAAAAAAAMAAQAAAAAAAAAAAAMAAUAAAAAAAAAAAAMAAYAAAAAAAAAAAAMAAcAAAAAAAAAAAAMAAgAAAAAAAAAAAAMAAkAAAAAAAAAAAAMAAoAAAAAAAAAAAANAAIAAAAAAAAAAAANAAMAAAAAAAAAAAANAAQAAAAAAAAAAAANAAUAAAAAAAAAAAANAAYAAAAAAAAAAAANAAcAAAAAAAAAAAANAAgAAAAAAAAAAAANAAkAAAAAAAAAAAANAAoAAAAAAAAAAAAOAAIAAAAAAAEAAAAOAAMAAAAAAAAAAAAOAAQAAAAAAAAAAAAOAAUAAAAAAAAAAAAOAAYAAAACAAAAAAAOAAcAAAAAAAAAAAAOAAgAAAAAAAAAAAAOAAkAAAAAAAAAAAAOAAoAAAAAAAAAAAAPAAIAAAAAAAEAAAAPAAMAAAAAAAAAAAAPAAQAAAAAAAAAAAAPAAUAAAAAAAAAAAAPAAYAAAAAAAAAAAAPAAcAAAAAAAAAAAAPAAgAAAAAAAAAAAAPAAkAAAAAAAAAAAAPAAoAAAAAAAAAAAAQAAIAAAAAAAAAAAAQAAMAAAAAAAEAAAAQAAQAAAAAAAAAAAAQAAUAAAAAAAAAAAAQAAYAAAAAAAAAAAAQAAcAAAAAAAAAAAAQAAgAAAAAAAAAAAAQAAkAAAAAAAAAAAAQAAoAAAAAAAAAAAARAAIAAAAAAAAAAAARAAMAAAAAAAEAAAARAAQAAAAAAAAAAAARAAUAAAAAAAAAAAARAAYAAAAAAAAAAAARAAcAAAAAAAAAAAARAAgAAAAAAAAAAAARAAkAAAAAAAAAAAARAAoAAAAAAAAAAAASAAIAAAAAAAAAAAASAAMAAAAAAAEAAAASAAQAAAAAAAAAAAASAAUAAAAAAAAAAAASAAYAAAAAAAAAAAASAAcAAAAAAAAAAAASAAgAAAAAAAAAAAASAAkAAAAAAAAAAAASAAoAAAAAAAAAAAATAAIAAAAAAAAAAAATAAMAAAAAAAEAAAATAAQAAAAAAAAAAAATAAUAAAAAAAAAAAATAAYAAAAAAAAAAAATAAcAAAAAAAAAAAATAAgAAAAAAAAAAAATAAkAAAAAAAAAAAATAAoAAAAAAAAAAAAUAAIAAAAAAAAAAAAUAAMAAAAAAAEAAAAUAAQAAAAAAAAAAAAUAAUAAAAAAAAAAAAUAAYAAAAAAAAAAAAUAAcAAAAAAAAAAAAUAAgAAAAAAAAAAAAUAAkAAAAAAAAAAAAUAAoAAAAAAAAAAAAVAAIAAAAAAAAAAAAWAAIAAAAAAAAAAAAXAAIAAAAAAAAAAAAYAAIAAAAAAAAAAAAZAAIAAAABAAAAAAASAAsAAAAAAAAAAAATAAsAAAAAAAAAAAAUAAsAAAAAAAAAAAD///j/AAAAAAEAAAAAAPn/AAAAAAEAAAD///n/AAAAAAEAAAD///r/AAAAAAEAAAD///v/AAAAAAAAAAD///z/AAAAAAAAAAD///3/AAAAAAAAAAD///7/AAAAAAAAAAAAAPr/AAAAAAEAAAAAAPv/AAAAAAAAAAAAAPz/AAAAAAAAAAAAAP3/AAAAAAAAAAAAAP7/AAAAAAAAAAABAPr/AAABAAAAAAABAPv/AAAAAAEAAAABAPz/AAAAAAAAAAABAP3/AAAAAAAAAAACAPr/AAABAAAAAAACAPv/AAAAAAAAAAACAPz/AAAAAAEAAAACAP3/AAAAAAAAAAACAP7/AAAAAAAAAAADAPr/AAABAAAAAAADAPv/AAABAAAAAAADAPz/AAAAAAAAAAADAP3/AAAAAAEAAAADAP7/AAAAAAAAAAABAPn/AAABAAAAAAAEAP//AAAAAAAAAAAMAP//AAAAAAAAAAAMAAAAAAAAAAAAAAAMAAEAAAAAAAEAAAANAP//AAAAAAAAAAANAAAAAAAAAAAAAAANAAEAAAAAAAEAAAAEAPv/AAABAAAAAAAEAPz/AAAAAAAAAAAEAP3/AAAAAAAAAAAEAP7/AAAAAAAAAAAFAPz/AAAAAAAAAAAFAP3/AAAAAAAAAAAFAP7/AAAAAAEAAAAFAPv/AAABAAAAAAAGAPv/AAABAAAAAAAGAPz/AAABAAAAAAAGAP3/AAAAAAAAAAAGAP7/AAAAAAAAAAAHAPz/AAABAAAAAAAHAP3/AAAAAAAAAAAHAP7/AAAAAAAAAAAIAPz/AAABAAAAAAAIAP3/AAAAAAAAAAAIAP7/AAAAAAAAAAAJAP3/AAABAAAAAAAJAP7/AAAAAAAAAAAKAP3/AAABAAAAAAAKAP7/AAAAAAAAAAAMAP7/AAABAAAAAAANAP7/AAABAAAAAAAOAP7/AAABAAAAAAAOAAAAAAAAAAAAAAAOAAEAAAAAAAAAAAAPAAAAAAAAAAAAAAAPAAEAAAAAAAAAAAAQAAAAAAAAAAAAAAAQAAEAAAAAAAAAAAAQAP//AAAAAAAAAAARAAAAAAAAAAAAAAARAAEAAAAAAAAAAAASAAEAAAAAAAAAAAASAAAAAAAAAAAAAAATAAEAAAAAAAAAAAATAAAAAAAAAAAAAAAUAAEAAAAAAAAAAAAVAAEAAAAAAAAAAAARAP//AAABAAAAAAALAP3/AAABAAAAAAAWAAEAAAABAAAAAAAPAP7/AAABAAAAAAACABEAAAABAAAAAAACABIAAAABAAAAAAADABEAAAABAAAAAAADABIAAAABAAAAAAAEABIAAAABAAAAAAAEABMAAAABAAAAAAAFABIAAAABAAAAAAAFABMAAAABAAAAAAAGABMAAAABAAAAAAAHABMAAAABAAAAAAAGABIAAAABAAAAAAAHABQAAAABAAAAAAAIABQAAAABAAAAAAAIABMAAAABAAAAAAAJABMAAAABAAAAAAAJABQAAAABAAAAAAAJABUAAAABAAAAAAAKABQAAAABAAAAAAAKABUAAAABAAAAAAALABQAAAABAAAAAAALABUAAAABAAAAAAAMABUAAAABAAAAAAAMABYAAAABAAAAAAANABUAAAABAAAAAAANABYAAAABAAAAAAAMABQAAAABAAAAAAAOABUAAAABAAAAAAAOABYAAAABAAAAAAAOABcAAAABAAAAAAAPABUAAAABAAAAAAAPABYAAAABAAAAAAAPABcAAAABAAAAAAAQABUAAAABAAAAAAAQABYAAAABAAAAAAAQABcAAAABAAAAAAARABUAAAABAAAAAAARABYAAAABAAAAAAARABcAAAABAAAAAAASABYAAAABAAAAAAASABcAAAABAAAAAAASABUAAAABAAAAAAATABYAAAABAAAAAAATABcAAAABAAAAAAAUABYAAAABAAAAAAAUABcAAAABAAAAAAAUABgAAAABAAAAAAAVABcAAAABAAAAAAAVABgAAAABAAAAAAAWABcAAAABAAAAAAAWABgAAAABAAAAAAAXABgAAAABAAAAAAAXABkAAAABAAAAAAAXABcAAAABAAAAAAAYABgAAAABAAAAAAAYABkAAAABAAAAAAAZABgAAAABAAAAAAAZABkAAAABAAAAAAAaABgAAAABAAAAAAAaABkAAAABAAAAAAAaABoAAAABAAAAAAAbABkAAAABAAAAAAAbABoAAAABAAAAAAAcABkAAAABAAAAAAAcABoAAAABAAAAAAAcABsAAAABAAAAAAAdABoAAAABAAAAAAAdABsAAAABAAAAAAAeABoAAAADAAEAAAAeABsAAAADAAEAAAAeABwAAAADAAEAAAAfABkAAAADAAEAAAAfABoAAAADAAEAAAAfABsAAAADAAEAAAAfABwAAAADAAEAAAAeAB0AAAADAAEAAAAdABwAAAADAAEAAAAcABwAAAADAAEAAAAbABsAAAADAAEAAAAaABsAAAADAAEAAAAZABsAAAADAAEAAAAYABoAAAADAAEAAAAXABoAAAADAAEAAAAWABoAAAADAAEAAAAVABkAAAADAAEAAAAUABkAAAADAAEAAAATABgAAAADAAEAAAASABgAAAADAAEAAAAWABkAAAADAAEAAAARABgAAAADAAEAAAAQABgAAAADAAEAAAAPABgAAAADAAEAAAAOABgAAAADAAEAAAANABcAAAADAAEAAAAMABcAAAADAAEAAAALABYAAAADAAEAAAAKABYAAAADAAEAAAAJABYAAAADAAEAAAAIABUAAAADAAEAAAAHABUAAAADAAEAAAAGABQAAAADAAEAAAAFABQAAAADAAEAAAAEABQAAAADAAEAAAADABMAAAADAAEAAAACABMAAAADAAEAAAAcAAIAAAABAAAAAAAcAAEAAAABAAAAAAAbAAEAAAABAAAAAAAbAAIAAAABAAAAAAAaAAIAAAABAAAAAAAaAAEAAAABAAAAAAAZAAAAAAABAAAAAAAZAAEAAAABAAAAAAAYAAEAAAABAAAAAAAYAAAAAAABAAAAAAAXAP//AAABAAAAAAAXAAAAAAABAAAAAAAXAAEAAAABAAAAAAAWAP//AAABAAAAAAAWAAAAAAABAAAAAAAVAAAAAAABAAAAAAAVAP//AAABAAAAAAAUAP7/AAABAAAAAAAUAP//AAABAAAAAAAUAAAAAAABAAAAAAATAP//AAABAAAAAAATAP7/AAABAAAAAAASAP7/AAABAAAAAAASAP//AAABAAAAAAARAP3/AAABAAAAAAARAP7/AAABAAAAAAAQAP7/AAABAAAAAAAQAP3/AAABAAAAAAAPAP3/AAABAAAAAAAOAP3/AAABAAAAAAANAP3/AAABAAAAAAAMAPz/AAACAAEAAAAMAP3/AAABAAAAAAALAPz/AAABAAAAAAAKAPz/AAABAAAAAAAJAPz/AAABAAAAAAAJAPv/AAABAAAAAAAIAPv/AAABAAAAAAAHAPv/AAABAAAAAAAGAPr/AAABAAAAAAAFAPr/AAABAAAAAAAEAPr/AAABAAAAAAADAPn/AAABAAAAAAACAPn/AAABAAAAAAABAPj/AAABAAAAAAAdAAMAAAADAAEAAAAeAAMAAAADAAEAAAAdAAIAAAADAAEAAAAeAAQAAAADAAEAAAAeAAIAAAADAAEAAAAeAAEAAAADAAEAAAAdAAEAAAADAAEAAAAcAAAAAAADAAEAAAAdAAAAAAADAAEAAAAbAAAAAAADAAEAAAAaAP//AAADAAEAAAAbAP//AAADAAEAAAAaAP7/AAADAAEAAAAZAP7/AAADAAEAAAAYAP7/AAADAAEAAAAZAP//AAADAAEAAAAXAP3/AAADAAEAAAAXAP7/AAADAAEAAAAWAP3/AAADAAEAAAAVAP3/AAADAAEAAAAWAP7/AAADAAEAAAAVAPz/AAADAAEAAAAUAPz/AAADAAEAAAAUAP3/AAADAAEAAAAVAP7/AAADAAEAAAAYAP//AAADAAEAAAATAP3/AAADAAEAAAATAPz/AAADAAEAAAATAPv/AAADAAEAAAASAPv/AAADAAEAAAASAPz/AAADAAEAAAARAPv/AAADAAEAAAARAPz/AAADAAEAAAASAP3/AAADAAEAAAAQAPv/AAADAAEAAAAQAPz/AAADAAEAAAAQAPr/AAADAAEAAAAPAPr/AAADAAEAAAAPAPv/AAADAAEAAAAOAPr/AAADAAEAAAAPAPz/AAADAAEAAAAOAPv/AAADAAEAAAANAPr/AAADAAEAAAAMAPr/AAADAAEAAAANAPv/AAADAAEAAAAOAPz/AAADAAEAAAANAPz/AAADAAEAAAAKAPv/AAADAAEAAAAJAPr/AAADAAEAAAAIAPn/AAADAAEAAAAJAPn/AAADAAEAAAAIAPr/AAADAAEAAAAHAPn/AAADAAEAAAAHAPr/AAADAAEAAAAGAPn/AAADAAEAAAAFAPj/AAADAAEAAAAEAPj/AAADAAEAAAADAPj/AAADAAEAAAAFAPn/AAADAAEAAAAEAPn/AAADAAEAAAADAPf/AAADAAEAAAACAPf/AAADAAEAAAACAPj/AAADAAEAAAABAPf/AAADAAEAAAAAAPb/AAADAAEAAAABAPb/AAADAAEAAAAAAPf/AAADAAEAAAD///b/AAADAAEAAAD///f/AAADAAEAAAAAAPj/AAADAAEAAAD+//f/AAADAAEAAAD+//b/AAADAAEAAAAJAPj/AAADAAEAAAALAPj/AAADAAEAAAAKAPj/AAADAAEAAAALAPn/AAADAAEAAAAMAPn/AAADAAEAAAAIAPj/AAADAAEAAAALAPv/AAACAAEAAAAMAPv/AAACAAEAAAALAPr/AAACAAEAAAAKAPr/AAACAAEAAAAOAP//AAAAAAAAAAAPAP//AAAAAAAAAAALAP7/AAAAAAAAAAAbAAMAAAAAAAAAAAA=")
tile_set = ExtResource("1_6yc6o")
script = ExtResource("2_6yc6o")

[node name="Unit" parent="." instance=ExtResource("2_njngi")]
position = Vector2(842.694, 908.046)
army = 1

[node name="English trench" type="Sprite2D" parent="."]
z_index = -2
position = Vector2(-953.339, 2410.39)
rotation = 0.261799
scale = Vector2(4, 4)
texture = ExtResource("4_8svjd")
vframes = 2
frame = 1

[node name="German trench" type="Sprite2D" parent="."]
modulate = Color(0.454524, 0.454524, 0.454524, 1)
z_index = -1
position = Vector2(3536.68, 806.853)
rotation = 0.261799
scale = Vector2(4, 4)
texture = ExtResource("4_8svjd")
vframes = 2

[node name="No Mans Land" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(1172, 1602)
rotation = 0.261799
scale = Vector2(4, 4)
texture = ExtResource("5_3g1qk")

[node name="No Mans Land2" type="Sprite2D" parent="."]
modulate = Color(0.556953, 0.556953, 0.556953, 1)
z_index = -1
position = Vector2(5662.89, 23.4618)
rotation = 0.261799
scale = Vector2(4, 4)
texture = ExtResource("5_3g1qk")

[node name="Trees" parent="." instance=ExtResource("6_3g1qk")]
position = Vector2(-19.3732, 632.539)

[node name="Trees2" parent="." instance=ExtResource("6_3g1qk")]
position = Vector2(1708.25, 961.903)

[node name="Trees3" parent="." instance=ExtResource("6_3g1qk")]
position = Vector2(1515.48, 1909.29)

[node name="Trees4" parent="." instance=ExtResource("6_3g1qk")]
position = Vector2(-1171.8, 516.724)
scale = Vector2(3, 3)
tree_ind = 1

[node name="Trees5" parent="." instance=ExtResource("6_3g1qk")]
position = Vector2(374.61, 1264.03)
scale = Vector2(3, 3)
tree_ind = 1

[node name="Trees6" parent="." instance=ExtResource("6_3g1qk")]
position = Vector2(2876, 1610.65)
scale = Vector2(3, 3)
tree_ind = 1

[node name="Trees7" parent="." instance=ExtResource("6_3g1qk")]
position = Vector2(754.806, 250.288)
scale = Vector2(3, 3)

[node name="Trees8" parent="." instance=ExtResource("6_3g1qk")]
position = Vector2(555.244, -71.3211)
scale = Vector2(3, 3)

[node name="MachineGunPost" parent="." instance=ExtResource("7_d1580")]
z_index = 1
position = Vector2(3728.58, -2.0429)
scale = Vector2(4, 4)

[node name="SandbagWall" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(2030.98, 89.7143)
rotation = 0.261799
scale = Vector2(3, 3)
texture = ExtResource("8_5ej7w")
vframes = 2

[node name="SandbagWall2" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(4082.7, 1427.31)
rotation = 0.261799
scale = Vector2(3, 3)
texture = ExtResource("8_5ej7w")
vframes = 2

[node name="SandbagWall3" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(3101.21, 766.781)
rotation = 0.349066
scale = Vector2(3, 3)
texture = ExtResource("8_5ej7w")
vframes = 2
frame = 1

[node name="SandbagWall4" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(4483.71, 1727.33)
rotation = 0.261799
scale = Vector2(3, 3)
texture = ExtResource("8_5ej7w")
vframes = 2

[node name="BarbedWire" parent="." instance=ExtResource("9_lymsy")]
position = Vector2(4174.59, 2150.75)

[node name="BarbedWire2" parent="." instance=ExtResource("9_lymsy")]
position = Vector2(4354.29, 2225.81)

[node name="BarbedWire3" parent="." instance=ExtResource("9_lymsy")]
position = Vector2(4175.64, 2030.94)

[node name="BarbedWire4" parent="." instance=ExtResource("9_lymsy")]
position = Vector2(3995.05, 1951.49)

[node name="BarbedWire5" parent="." instance=ExtResource("9_lymsy")]
position = Vector2(3978.75, 1838.42)

[node name="BarbedWire6" parent="." instance=ExtResource("9_lymsy")]
position = Vector2(3796.42, 1761.61)

[node name="BarbedWire7" parent="." instance=ExtResource("9_lymsy")]
position = Vector2(3787.41, 1648.42)

[node name="BarbedWire8" parent="." instance=ExtResource("9_lymsy")]
position = Vector2(1494.59, -393.712)

[node name="BarbedWire9" parent="." instance=ExtResource("9_lymsy")]
position = Vector2(1493.5, -504.648)

[node name="BarbedWire10" parent="." instance=ExtResource("9_lymsy")]
position = Vector2(1307.36, -470.667)

[node name="BarbedWire11" parent="." instance=ExtResource("9_lymsy")]
position = Vector2(3583.82, 1568.89)

[node name="BarbedWire12" parent="." instance=ExtResource("9_lymsy")]
position = Vector2(3415.37, 1517.55)

[node name="BarbedWire13" parent="." instance=ExtResource("9_lymsy")]
position = Vector2(3223.76, 1444.46)

[node name="BarbedWire14" parent="." instance=ExtResource("9_lymsy")]
position = Vector2(3034.52, 1374.09)

[node name="BarbedWire15" parent="." instance=ExtResource("9_lymsy")]
position = Vector2(2826.6, 1316.43)

[node name="BarbedWire16" parent="." instance=ExtResource("9_lymsy")]
position = Vector2(2637.69, 1243.94)

[node name="BarbedWire17" parent="." instance=ExtResource("9_lymsy")]
position = Vector2(2640.65, 1137.2)

[node name="BarbedWire18" parent="." instance=ExtResource("9_lymsy")]
position = Vector2(2442.01, 1066.24)

[node name="BarbedWire19" parent="." instance=ExtResource("9_lymsy")]
position = Vector2(2442.03, 947.322)

[node name="BarbedWire20" parent="." instance=ExtResource("9_lymsy")]
position = Vector2(2262.59, 871.29)

[node name="BarbedWire21" parent="." instance=ExtResource("9_lymsy")]
position = Vector2(2250.49, 757.142)

[node name="BarbedWire22" parent="." instance=ExtResource("9_lymsy")]
position = Vector2(2064.34, 690.699)

[node name="BarbedWire23" parent="." instance=ExtResource("9_lymsy")]
position = Vector2(1881.75, 614.857)

[node name="BarbedWire24" parent="." instance=ExtResource("9_lymsy")]
position = Vector2(1877.83, 499.022)

[node name="BarbedWire25" parent="." instance=ExtResource("9_lymsy")]
position = Vector2(1685.77, 423.748)

[node name="BarbedWire26" parent="." instance=ExtResource("9_lymsy")]
position = Vector2(1484.04, 245.461)

[node name="BarbedWire27" parent="." instance=ExtResource("9_lymsy")]
position = Vector2(1290.98, 30.0281)

[node name="BarbedWire28" parent="." instance=ExtResource("9_lymsy")]
position = Vector2(1287.41, -103.446)

[node name="BarbedWire29" parent="." instance=ExtResource("9_lymsy")]
position = Vector2(1288.05, -214.047)

[node name="BarbedWire30" parent="." instance=ExtResource("9_lymsy")]
position = Vector2(1294.07, -340.81)

[node name="BarbedWire31" parent="." instance=ExtResource("9_lymsy")]
position = Vector2(1113.27, -407.889)
